# ecc

./: .gitignore  CMakeLists.txt  Makefile  Notes.md  README.md
final_presentation/: Beamer-class-Bsp8-Bergen.tex  literature.bib
include/: fe.hpp  (+16 more)
src/: CMakeLists.txt  HelloWorld.cpp  M511.cpp  base64.cpp  block.cpp  debug.cpp  ecc.cpp  fe_add.cpp  fe_add_gmp.cpp  fe_const_add.cpp  fe_const_convert.cpp  fe_const_invert.cpp  fe_const_mul.cpp  fe_const_sub.cpp  fe_convert.cpp  fe_convert_gmp.cpp  fe_gmp.cpp  fe_gmp_add.cpp  fe_gmp_convert.cpp  fe_gmp_cswap.cpp  fe_gmp_invert.cpp  fe_gmp_mul.cpp  fe_gmp_sub.cpp  fe_mul.cpp  fe_mul_gmp.cpp  fe_sub.cpp  fe_sub_gmp.cpp  keys.cpp  m511_keygen.cpp  mysha.cpp  point.cpp  rawblock.cpp  scalar_arth.cpp  scalar_convert.cpp  scalar_random.cpp  scalarmult.cpp
src/cmdline/: cmdline.cpp  cmdline_box.cpp  cmdline_box_open.cpp  cmdline_decrypt.cpp  cmdline_encrypt.cpp  cmdline_keygen.cpp  cmdline_sign.cpp  cmdline_test.cpp  cmdline_verify.cpp
src/fe/: fe_const_convert.cpp  fe_const_invert.cpp  fe_gmp_a24.cpp  fe_gmp_add.cpp  fe_gmp_convert.cpp  fe_gmp_cswap.cpp  fe_gmp_equal.cpp  fe_gmp_invert.cpp  fe_gmp_mul.cpp  fe_gmp_sub.cpp
src/m511/: M511.cpp  finitefieldelement.cpp  m511_core.cpp  m511_keygen.cpp
src/messages/: decrypt.cpp  encode.cpp  encrypt.cpp  rawblock.cpp  sign.cpp  verify.cpp
src/point/: point_add.cpp  point_addition.cpp  point_convert.cpp  point_cswap.cpp  point_dbl.cpp  point_doubleandadd.cpp  point_project.cpp  point_recovery.cpp
src/scalar/: scalar.cpp  scalar_arth.cpp  scalar_convert.cpp  scalar_random.cpp
(+28 files in other folders)
