FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

# Add libraries here. Example: ${Boost_LIBRARIES}
SET (project_LIBS ${GMPXX_LIBRARIES} ${GMP_LIBRARIES} ${OPENSSL_LIBRARIES} docopt)
SET (project_BIN ${PROJECT_NAME})

INCLUDE_DIRECTORIES(${docopt_HEADERS} ${OPENSSL_INCLUDE_DIR})

ADD_DEFINITIONS(-DFE_CONST=${CONST_TIME})

ADD_EXECUTABLE(${project_BIN} ${project_SRCS})
TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
